tests/Checker/everything/errors/13b.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *13: wrong type for element in array initialiser
Compilation was unsuccessful.
